// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuickLinks Future effective date is not displayed 1`] = `
<div
  className="collection"
>
  <div
    className="card oneCard"
  >
    <div
      className="titleContainer"
    >
      <h3
        className="title"
      >
        SOPs
      </h3>
      <a
        className="seeAll"
        onClick={[Function]}
        style={Object {}}
      >
        See all
      </a>
    </div>
    <hr
      className="dash"
      style={
        Object {
          "width": "1.667rem",
        }
      }
    />
    <div>
      <div>
        <a
          onClick={[Function]}
          style={Object {}}
        >
          SOP 691 - Document Title 2
        </a>
        <div
          className="date"
        >
          Mar 26, 1991
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuickLinks Most recent effective date displayed 1`] = `
<div
  className="collection"
>
  <div
    className="card oneCard"
  >
    <div
      className="titleContainer"
    >
      <h3
        className="title"
      >
        SOPs
      </h3>
      <a
        className="seeAll"
        onClick={[Function]}
        style={Object {}}
      >
        See all
      </a>
    </div>
    <hr
      className="dash"
      style={
        Object {
          "width": "1.667rem",
        }
      }
    />
    <div>
      <div>
        <a
          onClick={[Function]}
          style={Object {}}
        >
          SOP 873 - Document Title 1
        </a>
        <div
          className="date"
        >
          Sep 4, 2016
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuickLinks No SOP number so it is not displayed 1`] = `
<div
  className="collection"
>
  <div
    className="card oneCard"
  >
    <div
      className="titleContainer"
    >
      <h3
        className="title"
      >
        SOPs
      </h3>
      <a
        className="seeAll"
        onClick={[Function]}
        style={Object {}}
      >
        See all
      </a>
    </div>
    <hr
      className="dash"
      style={
        Object {
          "width": "1.667rem",
        }
      }
    />
    <div>
      <div>
        <a
          onClick={[Function]}
          style={Object {}}
        >
          Document Title 4
        </a>
        <div
          className="date"
        >
          Mar 26, 1991
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuickLinks SOP number exists and is displayed 1`] = `
<div
  className="collection"
>
  <div
    className="card oneCard"
  >
    <div
      className="titleContainer"
    >
      <h3
        className="title"
      >
        SOPs
      </h3>
      <a
        className="seeAll"
        onClick={[Function]}
        style={Object {}}
      >
        See all
      </a>
    </div>
    <hr
      className="dash"
      style={
        Object {
          "width": "1.667rem",
        }
      }
    />
    <div>
      <div>
        <a
          onClick={[Function]}
          style={Object {}}
        >
          SOP 42 - Document Title 3
        </a>
        <div
          className="date"
        >
          Sep 4, 2013
        </div>
      </div>
    </div>
  </div>
</div>
`;
